--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ competitor name:
         <div class="mb-3 row">
             <label for="inputCallerEmail" class="col-sm-10 col-form-label"><strong>Resolved/Escalated</strong></label>
             <div class="col-sm-13">
-                <input type="text" id="product" rows="1" cols="30" wrap="soft" class="form-control">
+                <input type="text" id="resEsc" rows="1" cols="30" wrap="soft" class="form-control">
             </div>
         </div>
 
